# pongc

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
include/: utils.h
src/: ball.c  client.c  client.h  config.h  game.c  game.h  main.c  server.c  shaders.h  shared.h  signals.c  signals.h  utils.c  utils.h
